#ifndef I_SCENELOADER_H
#define I_SCENELOADER_H
#include <EngineLibrary/ManageSingleton.h>


//----- SceneLoader ’è‹`
namespace EtherEngine {
    public ref class SceneLoader {
        ETHER_ENGINE_MANAGE_SINGLETON(SceneLoader);
    public:

    };
}


#endif // !I_SCENELOADER_H
